@@ -6,11 +6,11 @@
 #include "spvm_base.h"
 
 enum {
-  SPVM_TYPE_C_CORE_LENGTH = 15
+  SPVM_TYPE_C_CORE_LENGTH = 17
 };
 
 enum {
-  SPVM_TYPE_C_ARRAY_SHIFT = 6
+  SPVM_TYPE_C_ARRAY_SHIFT = 8
 };
 
 enum {
@@ -25,6 +25,7 @@ enum {
   SPVM_TYPE_C_ID_LONG,
   SPVM_TYPE_C_ID_FLOAT,
   SPVM_TYPE_C_ID_DOUBLE,
+  SPVM_TYPE_C_ID_OBJECT,
   SPVM_TYPE_C_ID_STRING,
   SPVM_TYPE_C_ID_BYTE_ARRAY,
   SPVM_TYPE_C_ID_SHORT_ARRAY,
@@ -32,6 +33,7 @@ enum {
   SPVM_TYPE_C_ID_LONG_ARRAY,
   SPVM_TYPE_C_ID_FLOAT_ARRAY,
   SPVM_TYPE_C_ID_DOUBLE_ARRAY,
+  SPVM_TYPE_C_ID_OBJECT_ARRAY,
   SPVM_TYPE_C_ID_STRING_ARRAY,
 };
 
@@ -63,6 +65,7 @@ _Bool SPVM_TYPE_is_array_numeric(SPVM_COMPILER* compiler, SPVM_TYPE* type);
 _Bool SPVM_TYPE_is_string(SPVM_COMPILER* compiler, SPVM_TYPE* type);
 _Bool SPVM_TYPE_is_package(SPVM_COMPILER* compiler, SPVM_TYPE* type);
 _Bool SPVM_TYPE_is_object(SPVM_COMPILER* compiler, SPVM_TYPE* type);
+_Bool SPVM_TYPE_is_any_object(SPVM_COMPILER* compiler, SPVM_TYPE* type);
 
 SPVM_TYPE* SPVM_TYPE_get_void_type(SPVM_COMPILER* compiler);
 SPVM_TYPE* SPVM_TYPE_get_byte_type(SPVM_COMPILER* compiler);
